@@ -28,6 +28,7 @@ Version 1.3.1+svn:
     * Haloes in tiny gui are now scaled (before unscaled, thus a factor 2 bigger
       as intended).
     * Fix some glitches when scrolling or zooming the map.
+    * Flying units are no longer buried in a castle.
 
   * Units changes and balancing:
     * Converted the cold resistance of the Elvish Sorceress line to a holy
