@@ -33,6 +33,7 @@ Version 1.3.1+svn:
    * the movement text is also scaled now (bug #6876, patch patch #693)
    * fix glitches when scrolling the map if zoomed out (bug #8768)
    * fix the right border glitch of the map when zooming (bug #6060 and others)
+   * flying units are no longer buried in a castle (patch #709)
    * scenery
      * added animated windmill, fancy and damaged tents, icepack, and shipwreck
  * language and i18n:
